--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a2f5">  <td>24/02/06 15:59:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.simpleTest()[pri:0, instance:tests.BaseClass@2a693f59]">simpleTest</td> 
+<tr bgcolor="746db9">  <td>24/03/22 16:56:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CFOTestCases.EntitiesCount()[pri:0, instance:tests.CFOTestCases@1972e513]">EntitiesCount</td> 
   <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="746db9">  <td>24/03/22 16:57:16</td>   <td>41094</td> <td>&nbsp;</td><td title="&lt;&lt;CFOTestCases.close()[pri:0, instance:tests.CFOTestCases@1972e513]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="746db9">  <td>24/03/22 16:55:59</td>   <td>-35443</td> <td>&nbsp;</td><td title="&gt;&gt;CFOTestCases.simpleTest()[pri:0, instance:tests.CFOTestCases@1972e513]">&gt;&gt;simpleTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
